# dakera-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  dist-workspace.toml
.github/: CODEOWNERS  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  deploy.yml  fix-sshd-emergency.yml  install-test.yml  publish-crate.yml  publish-linux-packages.yml  publish-snap.yml  release.yml
snap/: snapcraft.yaml
src/: cli.rs  config.rs  context.rs  error.rs  main.rs  output.rs  retry.rs
src/commands/: admin.rs  agent.rs  analytics.rs  completion.rs  config.rs  entity.rs  graph.rs  health.rs  index.rs  init.rs  keys.rs  knowledge.rs  memory.rs  mod.rs  namespace.rs  ops.rs  session.rs  text.rs  vector.rs
tests/: integration.rs
