[package]
name = "dakera-cli"
version = "0.5.4"
edition = "2021"
license = "MIT"
description = "Command-line interface for Dakera AI Agent Memory Platform"
repository = "https://github.com/dakera-ai/dakera-cli"
homepage = "https://dakera.ai"

[[bin]]
name = "dk"
path = "src/main.rs"

[dependencies]
# CLI framework (using builder API, no derive, minimal features for vendored deps)
clap = { version = "4.6", default-features = false, features = ["std", "help", "usage", "error-context", "env"] }

# Dakera client SDK
dakera-client = "0.9"

# Async runtime
tokio = { version = "1.37", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Colors (using nu-ansi-term which is vendored)
nu-ansi-term = "0.50"

# Config file support
toml = "1.1"
dirs = "5.0"

[dev-dependencies]
# Integration test harness: mock HTTP server + CLI subprocess runner
httpmock = "0.7"
assert_cmd = "2.2"
predicates = "3.1"
