[package]
name = "dakera-cli"
version = "0.6.0"
edition = "2021"
license = "MIT"
description = "Command-line interface for Dakera AI Agent Memory Platform"
repository = "https://github.com/dakera-ai/dakera-cli"
homepage = "https://dakera.ai"
documentation = "https://docs.rs/dakera-cli"
keywords = ["agent-memory", "vector-search", "knowledge-graph", "ai-agents", "mcp"]
categories = ["database", "science", "command-line-utilities"]

[[bin]]
name = "dk"
path = "src/main.rs"

[dependencies]
# CLI framework (using builder API, no derive, minimal features for vendored deps)
clap = { version = "4.6", default-features = false, features = ["std", "help", "usage", "error-context", "env"] }

# Dakera client SDK
dakera-client = "0.11"

# Async runtime
tokio = { version = "1.52", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Colors (using nu-ansi-term which is vendored)
nu-ansi-term = "0.50"

# Config file support
toml = "1.1"
dirs = "6.0"

# Table output
comfy-table = "7"

# Progress bars for long-running operations
indicatif = "0.17"

[dev-dependencies]
# Integration test harness: mock HTTP server + CLI subprocess runner
httpmock = "0.8"
assert_cmd = "2.2"
predicates = "3.1"

[package.metadata.deb]
maintainer = "Dakera AI <hello@dakera.ai>"
copyright = "2024-2026, Dakera AI"
section = "utility"
priority = "optional"
assets = [
  ["target/release/dk", "usr/bin/", "755"],
]
extended-description = """\
Dakera CLI for querying and managing AI agent memory. \
Connect to Dakera server instances to manage agent memories, \
sessions, and knowledge graphs from the command line."""

[package.metadata.generate-rpm]
assets = [
  { source = "target/release/dk", dest = "/usr/bin/dk", mode = "0755" },
]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/dk-{ target }.tar.gz"
bin-dir = "dk{ binary-ext }"
pkg-fmt = "tgz"

[[package.metadata.binstall.overrides]]
target = "x86_64-pc-windows-msvc"
pkg-url = "{ repo }/releases/download/v{ version }/dk.exe"
pkg-fmt = "bin"
